Finish Date Pickers in date filter. Closes #37 - made input fields in date filter `readonly`

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,8 +76,8 @@
         <div class="filter_tab_content">
             <div id="date_histogram_chart"></div>
 
-            From <input id="date_filter_from_field" type="text" autocomplete="off" spellcheck="false">
-            To <input id="date_filter_to_field" type="text" autocomplete="off" spellcheck="false">
+            From <input id="date_filter_from_field" type="text" autocomplete="off" spellcheck="false" readonly>
+            To <input id="date_filter_to_field" type="text" autocomplete="off" spellcheck="false" readonly>
 
             <hr size=1>
             Search results order by <select id="date_order">
