change order option in author and project filters to select element

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -103,7 +103,10 @@
 				<!--</form>-->
 				</div>
 				<div class="float_right">
-				 	Order: Name | Frequency
+					Order: <select id="project_order">
+						<option value="name">Name</option>
+						<option value="frequency">Frequency</option>
+					</select>
 				</div>
 				<div class="clear_both"></div>
 			</div>
@@ -130,7 +133,10 @@
 				<!--</form>-->
 				</div>
 				<div class="float_right">
-					Order: Name | Frequency
+					Order: <select id="author_order">
+					<option value="name">Name</option>
+					<option value="frequency">Frequency</option>
+				</select>
 				</div>
 				<div class="clear_both"></div>
 			</div>
