--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -103,9 +103,9 @@
 				<!--</form>-->
 				</div>
 				<div class="float_right">
-					Order: <select id="project_order">
-						<option value="name">Name</option>
-						<option value="frequency">Frequency</option>
+					Order by <select id="project_order">
+						<option value="name">name</option>
+						<option value="frequency">frequency</option>
 					</select>
 				</div>
 				<div class="clear_both"></div>
@@ -133,9 +133,9 @@
 				<!--</form>-->
 				</div>
 				<div class="float_right">
-					Order: <select id="author_order">
-					<option value="name">Name</option>
-					<option value="frequency">Frequency</option>
+					Order by <select id="author_order">
+					<option value="name">name</option>
+					<option value="frequency">frequency</option>
 				</select>
 				</div>
 				<div class="clear_both"></div>
