Initial proposal of active search filters functionality (right now for date filter). Add date format patterns and formatters and use them for all data formatting actions (histogram, search results, search filters).
Related to #56

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/search_field.css">
     <link rel="stylesheet" href="css/search_suggestions.css">
     <!--<link rel="stylesheet" href="css/search_suggestions_override.css">-->
+    <link rel="stylesheet" href="css/search_filter_active.css">
     <link rel="stylesheet" href="css/search_filter_tab.css">
     <link rel="stylesheet" href="css/search_results.css">
     <link rel="stylesheet" href="css/search_visualization_histogram.css">
