Started working on Profile App

--- a/profilePage/src/main/webapp/index.html
+++ b/profilePage/src/main/webapp/index.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 
-	<link rel="stylesheet" href="../../../../searchPage/src/main/webapp/css/reset.css">
-	<link rel="stylesheet" href="../../../../searchPage/src/main/webapp/css/reset_override.css">
-	<link rel="stylesheet" href="../../../../searchPage/src/main/webapp/css/search_base.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/reset_override.css">
+	<link rel="stylesheet" href="css/search_base.css">
 
 	<title>Contributor profile</title>
 </head>
 <body>
 
 	<div id="header">
+		<h3>Contributor Profile:</h3>
 		<div class="avatar">
 			<img src="http://www.gravatar.com/avatar/8672f1c3b11cc7390ec341ac25d7e88e?s=120&d=https%3A%2F%2Fcommunity.jboss.org%2Fgravatar%2F8672f1c3b11cc7390ec341ac25d7e88e%2F120.png"
 				 height="120">
