--- a/core/src/test/html/org/jboss/core/util/fragmentParser_test.html
+++ b/core/src/test/html/org/jboss/core/util/fragmentParser_test.html
@@ -20,11 +20,11 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test for org.jboss.search.util.fragmentParser</title>
+    <title>Test for org.jboss.core.util.fragmentParser</title>
 </head>
 <body>
 <script src="../../../../../../../../closure-library-99cd91/closure/goog/base.js"></script>
 <script src="fragmentParser_test_deps.js"></script>
-<script src="../../../../../javascript/org/jboss/search/util/fragmentParser_test.js"></script>
+<script src="../../../../../javascript/org/jboss/core/util/fragmentParser_test.js"></script>
 </body>
 </html>
