Move urlGenerator from search module to core module.

--- a/core/src/test/html/org/jboss/core/util/urlGenerator_test.html
+++ b/core/src/test/html/org/jboss/core/util/urlGenerator_test.html
@@ -20,11 +20,11 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test for org.jboss.search.util.urlGenerator</title>
+    <title>Test for org.jboss.core.util.urlGenerator</title>
 </head>
 <body>
     <script src="../../../../../../../../closure-library-99cd91/closure/goog/base.js"></script>
     <script src="urlGenerator_test_deps.js"></script>
-    <script src="../../../../../javascript/org/jboss/search/util/urlGenerator_test.js"></script>
+    <script src="../../../../../javascript/org/jboss/core/util/urlGenerator_test.js"></script>
 </body>
 </html>
