Reorder drop down filter tabs and rename them a bit.

--- a/searchPage/src/main/webapp/design/search_results/index.html
+++ b/searchPage/src/main/webapp/design/search_results/index.html
@@ -54,10 +54,11 @@
     <div id="search_filters">
 		<div id="second_filters_row">
 			<div class="filter caption">Filters</div>
-			<div class="filter option date">Date</div>
-			<div class="filter option project">Project</div>
-			<div class="filter option author">Author</div>
-			<div class="filter option content">Content</div>
+			<!--<div class="filter option domain">Site</div>-->
+			<div class="filter option project">Technology</div>
+			<div class="filter option content">Type</div>
+			<div class="filter option date">Time</div>
+			<div class="filter option author">People</div>
 			<div class="filter_clear"></div>
 		</div>
     </div>
