--- a/profilePage/src/main/webapp/index.html
+++ b/profilePage/src/main/webapp/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reset_override.css">
 	<link rel="stylesheet" href="css/search_base.css">
+	<link rel="stylesheet" href="css/profile_base.css">
 
 	<title>Contributor profile</title>
 </head>
@@ -13,16 +14,16 @@
 
 	<div id="header">
 		<h3>Contributor Profile:</h3>
-		<div class="avatar">
-			<img src="http://www.gravatar.com/avatar/8672f1c3b11cc7390ec341ac25d7e88e?s=120&d=https%3A%2F%2Fcommunity.jboss.org%2Fgravatar%2F8672f1c3b11cc7390ec341ac25d7e88e%2F120.png"
-				 height="120">
+		<div id="avatar_container">
+			<div></div>
 		</div>
-		<div class="info">
-			<h3>Gavin King</h3>
+		<div id="name_container">
+			...
 		</div>
 	</div>
 
 	<div id="report">
+		<div id="contributions_chart"/>
 		<!--
 			http://dcp-jbossorgdev.rhcloud.com/v1/rest/search?query=sys_contributors%3A%22Gavin%20King%20%3Cgavin%40hibernate.org%3E%22&field=sys_id&facet=top_contributors&facet=per_project_counts&facet=per_sys_type_counts&facet=activity_dates_histogram&size=0
 
