Profile - display contributions chart.

--- a/profilePage/src/main/webapp/index.html
+++ b/profilePage/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/reset_override.css">
 	<link rel="stylesheet" href="css/search_base.css">
 	<link rel="stylesheet" href="css/profile_base.css">
+	<link rel="stylesheet" href="css/search_visualization_histogram.css">
 
 	<title>Contributor profile</title>
 </head>
