Rename ProjectFilter tp TechnologyFilter.

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -98,7 +98,7 @@
 				<!--<form method="GET" id="project_filter_form" action="#">-->
 					<input
 							id="project_filter_query_field" type="text"
-							placeholder="Filter project"
+							placeholder="Filter technology"
 							autocomplete="off"
 							spellcheck="false"
 							autofocus="true" >
