[WIP] Switching TechnologyFilter to ListWidget.

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -117,6 +117,10 @@
                 <div>Initializing...</div>
             </div>
 
+            <div class="filter_items_orig">
+                <div>Initializing...</div>
+            </div>
+
         </div>
     </div>
 
