[WIP] Switching TechnologyFilter to ListWidget.

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -51,6 +51,7 @@
                         autocomplete="off"
                         spellcheck="false"
                         autofocus="true"
+                        tabindex="1"
                         disabled >
                     <div id="query_field_div_clear"></div>
                 </div>
