[Technology Filter] Prepare for list items ordering (counts/name).

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -106,7 +106,7 @@
 				<!--</form>-->
 				</div>
 				<div class="float_right">
-					Order by <select id="project_order">
+					Order by <select id="technology_order">
 						<option value="name">name</option>
 						<option value="frequency">frequency</option>
 					</select>
