--- a/searchPage/src/test/html/org/jboss/search/list/Project_test.html
+++ b/searchPage/src/test/html/org/jboss/search/list/Project_test.html
@@ -20,15 +20,15 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test for org.jboss.search.list.project.Project</title>
+    <title>Test for org.jboss.search.list.Project</title>
 </head>
 <body>
-    <script src="../../../../../../../../../closure-library-99cd91/closure/goog/base.js"></script>
+    <script src="../../../../../../../../closure-library-99cd91/closure/goog/base.js"></script>
     <script src="Project_test_deps.js"></script>
     <script type="text/javascript">
         goog.require('goog.testing.ContinuationTestCase');
         goog.require('goog.testing.jsunit');
     </script>
-    <script type="text/javascript" src="../../../../../../javascript/org/jboss/search/list/project/Project_test.js"></script>
+    <script type="text/javascript" src="../../../../../javascript/org/jboss/search/list/Project_test.js"></script>
 </body>
 </html>
