Implement Type filter. Closes #70
- Does not use keyboard handler (it is not clear how it should be used now)
- Does not allow to deselection of selected items (as the general filtering code does not allow it now)
- We created a new general NewRequestParamsEvent to be re-used by all filters

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -152,12 +152,9 @@
 
 	<div id="content_filter" class="filter_tab content hidden">
 		<div class="filter_tab_content">
-			<div class="filter_items">
-				<div>Issues</div>
-				<div>Mailing lists</div>
-				<div>Blogs</div>
-				<div>Articles</div>
-			</div>
+            <div class="filter_items">
+                <div>Initializing...</div>
+            </div>
 		</div>
 	</div>
 
