Allow deselecting list items in ListWidget.
ListModel now manages list of selected items. It can now correctly distinguish between selection and de-selection of particular list item. It also fires appropriate events.

 Technology Filter and Content Filter have been updated accordingly.

 Related tickets: #60, #50

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -29,12 +29,12 @@
 	</script>
 	<script>
 
-		var hostingDom = goog.dom.createDom('div', "test_only");
-		goog.dom.appendChild(goog.dom.getDocument().body, hostingDom);
+		var hostingElement = goog.dom.createDom('div', "test_only");
+		goog.dom.appendChild(goog.dom.getDocument().body, hostingElement);
 
 		var inputField = /** @type {HTMLInputElement} */ (goog.dom.getElement("query_field"));
 		var keyboardListener_ = new org.jboss.core.widget.list.keyboard.InputFieldKeyboardListener(inputField);
-        var mouseListener_ = new org.jboss.core.widget.list.mouse.MouseListener(hostingDom);
+        var mouseListener_ = new org.jboss.core.widget.list.mouse.MouseListener(hostingElement);
 
 		// use factory to create instance of ListController
 		var controller = org.jboss.core.widget.list.ListWidgetFactory.build({
@@ -46,7 +46,7 @@
 			],
 			controllerConstructor: org.jboss.core.widget.list.EchoListControllerTest,
 			additionalConstructorParams: [{delay:2000, repFactor:3}, {delay:0, repFactor:10}],
-			attach: hostingDom
+			attach: hostingElement
 		});
 
 		controller.setKeyboardListener(keyboardListener_);
