Allow deselecting items and highlight selected items in Technology and Content Filters
It is possible to select and deselect individual items in lists (aka toggle). The information about selected items is now correctly propagated from the URL fragment to UI state as well (the UI state is now fully bookmarkable again).

The Technology filter contains more lists with items from the same set ("all technologies", "matching" technologies and "did you mean" technologies). If list item is selected or deselected in one of them the state is correctly propagated to the other lists if they contain the same item. For example, deselecting item in "matching" list will automatically deselect this same item from "all technologies" too.

Added and fixed bunch of things:
- Unified internal terminology (selected vs. pointed)
- Fixed incorrect use of clone in Lookup (the Type and Technology array clone functions)
- Information about selected items is now part of ListItem instead of ListModel object. This is how it should have been
- Removed some unused
- Doing some refactoring

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -5,7 +5,8 @@
 	<title>Interactive test of ListWidget</title>
 	<style>
 		.list > div { border: 2px solid white;}
-		div.selected { border: 2px solid blue; }
+		div.pointed { border: 2px solid gray; }
+		div.selected { border: 2px solid gray; }
 	</style>
 </head>
 <body>
