[Author filter] Move to new general list filter implementation. Closes #81
Disabling search field in Author filter because we do not have any public suggestions API for it now (see https://github.com/searchisko/searchisko/issues/125).

--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -132,7 +132,8 @@
 							placeholder="Filter author"
 							autocomplete="off"
 							spellcheck="false"
-							autofocus="true" >
+							autofocus="true"
+                            disabled="true" >
 				<!--</form>-->
 				</div>
 				<div class="float_right">
