[Design] A new logo.
I asked designers to produce a new logo for the application in order to align it more close to the official JBoss Developer family.

- New logo image
- Minor change in background color

--- a/searchPage/src/main/webapp/design/search_results/index.html
+++ b/searchPage/src/main/webapp/design/search_results/index.html
@@ -28,7 +28,7 @@
     <div id="search_top">
         <div>
             <!--<h1>JBoss Community Search</h1>-->
-            <a href="#"><img class="jcs_logo" src="../../image/jcs_logo_bree.png"></a>
+            <a href="#"><img class="jcs_logo" src="../../image/search_logo.png"></a>
         </div>
         <div>
             <form method="GET" id="searchform" action="#">
