--- a/searchPage/src/main/webapp/index.html
+++ b/searchPage/src/main/webapp/index.html
@@ -27,15 +27,15 @@
     <link rel="stylesheet" href="css/goog/css/popupdatepicker.css">
     <link rel="stylesheet" href="css/goog/goog.ui.z-index.override.css">
 
-    <title>Search JBoss Community</title>
+    <title>JBoss Developer Search</title>
 
 </head>
 <body>
 
     <div id="search_top">
         <div>
-            <!--<h1>JBoss Community Search</h1>-->
-            <a href="index.html"><img class="jcs_logo" src="image/jcs_logo_bree.png"></a>
+            <!--<h1>JBoss Developer Search</h1>-->
+            <a href="index.html"><img class="jcs_logo" src="image/search_logo.png"></a>
         </div>
         <div>
             <form method="GET" id="searchform" action="#">
