Enable update of view in InteractiveListWidget test file.
This is very handy for further manual testing and development.

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -5,8 +5,8 @@
 	<title>Interactive test of ListWidget</title>
 	<style>
 		.list > div { border: 2px solid white;}
-		div.pointed { border: 2px solid gray; }
-		div.selected { border: 2px solid gray; }
+		div.pointed { border: 2px solid dodgerblue; }
+		div.selected { background-color: rgba(70, 120, 170, 0.37); }
 	</style>
 </head>
 <body>
