Improve interactive ListWidget test.

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -4,17 +4,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Interactive test of ListWidget</title>
 	<style>
+        input { width: 100%;}
 		.list > div { border: 2px solid white;}
+		div.caption {
+            font-style: italic;
+            text-decoration: underline;
+        }
 		div.pointed { border: 2px solid dodgerblue; }
 		div.selected { background-color: rgba(70, 120, 170, 0.37); }
+        .listWidget {
+            border: 1px solid gray;
+            padding: 10pt;
+            margin-right: 3pt;
+            float: left;
+        }
+        .listItemsWrapper {
+            padding: 10pt;
+            border: 1px dotted #d3d3d3;
+            max-height: 300px;
+            overflow: auto;
+        }
 	</style>
-</head>
-<body>
-	<h3>Interactive manual testing</h3>
-	<input id="query_field" type="text">
 	<script src="../../../../../../../../../closure-library-99cd91/closure/goog/base.js"></script>
 	<script src="ListWidget_test_deps.js"></script>
-	<!--<script src="InteractiveListWidget_test.js"></script>-->
 	<script type="text/javascript">
 		goog.require('goog.async.nextTick');
 		goog.require('goog.events');
@@ -28,36 +40,56 @@
 		goog.require('org.jboss.core.widget.list.mouse.MouseListener');
 		goog.require('org.jboss.core.widget.list.EchoListControllerTest');
 	</script>
+</head>
+<body>
+	<h3>Interactive test of <code>ListWidget</code></h3>
+    <p>
+        This page allows for interactive manual testing of <code>ListWidget</code> component.
+    </p>
+
+    <div class="listWidget">
+        <input id="query_field_1" type="text" placeholder="First filter...">
+        <div class="listItemsWrapper">
+            <div class="listWidget_1"></div>
+        </div>
+    </div>
+    <div class="listWidget">
+        <input id="query_field_2" type="text" placeholder="Second filter...">
+        <div class="listItemsWrapper">
+            <div class="listWidget_2"></div>
+        </div>
+    </div>
 	<script>
 
-		var hostingElement = goog.dom.createDom('div', "test_only");
-		goog.dom.appendChild(goog.dom.getDocument().body, hostingElement);
+        // crete ListWidget #1
 
-		var inputField = /** @type {HTMLInputElement} */ (goog.dom.getElement("query_field"));
-		var keyboardListener_ = new org.jboss.core.widget.list.keyboard.InputFieldKeyboardListener(inputField);
-        var mouseListener_ = new org.jboss.core.widget.list.mouse.MouseListener(hostingElement);
+        var hostingElement_1 = goog.dom.getElementByClass('listWidget_1');
+		var inputField_1 = /** @type {HTMLInputElement} */ (goog.dom.getElement('query_field_1'));
+
+		var keyboardListener_1 = new org.jboss.core.widget.list.keyboard.InputFieldKeyboardListener(inputField_1);
+        var mouseListener_1 = new org.jboss.core.widget.list.mouse.MouseListener(hostingElement_1);
 
 		// use factory to create instance of ListController
-		var controller = org.jboss.core.widget.list.ListWidgetFactory.build({
+		var controller_1 = org.jboss.core.widget.list.ListWidgetFactory.build({
 			lists: [
 				// the first item list is without caption (you can also omit the caption property at all)
 				// the second item list has caption
-				{key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY1, caption: null},
-				{key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY2, caption:"With Caption"}
+				{key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY1, caption: 'Delayed (2 sec)'},
+				{key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY2, caption: 'Fast'}
 			],
 			controllerConstructor: org.jboss.core.widget.list.EchoListControllerTest,
 			additionalConstructorParams: [{delay:2000, repFactor:3}, {delay:0, repFactor:10}],
-			attach: hostingElement
+			attach: hostingElement_1
 		});
 
-		controller.setKeyboardListener(keyboardListener_);
-        controller.setMouseListener(mouseListener_);
-		controller.input("Welcome!");
+		controller_1.setKeyboardListener(keyboardListener_1);
+        controller_1.setMouseListener(mouseListener_1);
+		controller_1.input('Welcome in list #1!');
 
-		var inputFieldValue = inputField.value;
+		var inputField_1_Value = inputField_1.value;
 
-		var listener_ = goog.events.listen(
-			new goog.events.KeyHandler(inputField),
+		var listener_1 = goog.events.listen(
+			new goog.events.KeyHandler(inputField_1),
 			[
 				goog.events.KeyHandler.EventType.KEY
 //				goog.events.EventType.CHANGE
@@ -67,14 +99,59 @@
 				if (goog.events.KeyCodes.isTextModifyingKeyEvent(/** @type {goog.events.BrowserEvent} */ (e))) {
                     goog.async.nextTick(
 						function(){
-							if (this.inputFieldValue != this.inputField.value) {
-								this.inputFieldValue = this.inputField.value;
-								controller.input(this.inputField.value);}
+							if (this.inputField_1_Value != this.inputField_1.value) {
+								this.inputField_1_Value = this.inputField_1.value;
+								controller_1.input(this.inputField_1.value);}
 						}, this
 					);
 				}
 			}, this));
 
+        // crete ListWidget #2
+
+        var hostingElement_2 = goog.dom.getElementByClass('listWidget_2');
+        var inputField_2 = /** @type {HTMLInputElement} */ (goog.dom.getElement('query_field_2'));
+
+        var keyboardListener_2 = new org.jboss.core.widget.list.keyboard.InputFieldKeyboardListener(inputField_2);
+        var mouseListener_2 = new org.jboss.core.widget.list.mouse.MouseListener(hostingElement_2);
+
+        // use factory to create instance of ListController
+        var controller_2 = org.jboss.core.widget.list.ListWidgetFactory.build({
+            lists: [
+                // the first item list is without caption (you can also omit the caption property at all)
+                // the second item list has caption
+                {key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY1, caption: 'Delayed (1 sec)'},
+                {key: org.jboss.core.widget.list.EchoListControllerTest.KEYS.KEY2, caption: 'Fast'}
+            ],
+            controllerConstructor: org.jboss.core.widget.list.EchoListControllerTest,
+            additionalConstructorParams: [{delay:1000, repFactor:5}, {delay:0, repFactor:20}],
+            attach: hostingElement_2
+        });
+
+        controller_2.setKeyboardListener(keyboardListener_2);
+        controller_2.setMouseListener(mouseListener_2);
+        controller_2.input('Welcome in list #2!');
+
+		var inputField_2_Value = inputField_2.value;
+
+        var listener_2 = goog.events.listen(
+                new goog.events.KeyHandler(inputField_2),
+                [
+                    goog.events.KeyHandler.EventType.KEY
+//				goog.events.EventType.CHANGE
+                ],
+                goog.bind(function(e) {
+                    // does not capture cut & paste events
+                    if (goog.events.KeyCodes.isTextModifyingKeyEvent(/** @type {goog.events.BrowserEvent} */ (e))) {
+                        goog.async.nextTick(
+                                function(){
+                                    if (this.inputField_2_Value != this.inputField_2.value) {
+                                        this.inputField_2_Value = this.inputField_2.value;
+                                        controller_2.input(this.inputField_2.value);}
+                                }, this
+                        );
+                    }
+                }, this));
 	</script>
 </body>
 </html>
