Improve interactive ListWidget test CSS.

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -5,7 +5,10 @@
 	<title>Interactive test of ListWidget</title>
 	<style>
         input { width: 100%;}
-		.list > div { border: 2px solid white;}
+		.list > div {
+            border: 2px solid white;
+            padding: 0 10pt;
+        }
 		div.caption {
             font-style: italic;
             text-decoration: underline;
@@ -19,7 +22,6 @@
             float: left;
         }
         .listItemsWrapper {
-            padding: 10pt;
             border: 1px dotted #d3d3d3;
             max-height: 300px;
             overflow: auto;
