Improve interactive ListWidget test CSS.

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -20,7 +20,10 @@
             margin-left: -5pt;
             margin-top: 5pt;
         }
-		div.pointed { border: 2px solid dodgerblue; }
+		div.pointed {
+            border: 2px solid dodgerblue;
+            cursor: pointer;
+        }
 		div.selected { background-color: rgba(70, 120, 170, 0.37); }
         .listWidget {
             border: 1px solid gray;
