MouseListener catch nested CLICK events.
After we enabled HTML content in ListItems in #89 we also need to make MouseListener to correctly catch CLICK events from nested DOM Elements within list items.

--- a/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
+++ b/core/src/test/html/org/jboss/core/widget/list/InteractiveListWidget_test.html
@@ -177,7 +177,7 @@
 
         controller_2.setKeyboardListener(keyboardListener_2);
         controller_2.setMouseListener(mouseListener_2);
-        controller_2.input('HTML is the <b>king</b>!');
+        controller_2.input('HTML <b>is the <em>king</em></b>!');
 
 		var inputField_2_Value = inputField_2.value;
 
